初步可用的网站

--- a/_posts/2019-04-16-设计模式-外观模式.md
+++ b/_posts/2019-04-16-设计模式-外观模式.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      外观模式
+subtitle:   门面模式
+date:       2019-04-16
+author:     guuguo
+catalog: true
+tags:
+    - 设计模式
+
+---
+
 # 外观模式(门面模式)
 
 定制一个门面类，统一处理内聚的功能，就是**外观模式(门面模式)**
