--- a/_posts/2019-04-16-设计模式-设计模式的项目应用探索.md
+++ b/_posts/2019-04-16-设计模式-设计模式的项目应用探索.md
@@ -1,8 +1,20 @@
+---
+layout:     post
+title:      设计模式的项目应用探索
+date:       2019-04-16
+author:     guuguo
+catalog:    true
+tags:
+    - 设计模式
+
+---
 # 设计模式的项目应用探索
 
 **设计模式**作为大厦的基石存在，以一种大家都认可的方式构造出一个个可用的好用的项目。借由大家对设计模式的一致的认知，方便了团队协作开发者相互之间代码的理解与协作。
 
-## 前言:我们为什么要学习设计模式？
+## 前言
+
+> 我们为什么要学习设计模式？
 
 通过学习我觉得学习设计模式可以解决以下三个问题：
 
@@ -10,9 +22,9 @@
 
 在初学编程的时候，我们只是为了实现功能，这时候代码都是顺序而下，没有经过模板的设计，但是随着需求的增加，我们就需要改动原有的代码。
 
-最开始的时候，我们会按照安卓的生命周期把所有的初始化的代码都写在 **oncreate** 方法内，导致 **oncreate** 方法大量臃肿，此时就会着手抽离出一个个小的方法。在抽离完成之后，每个 **activity** 的小方法不一致，杂乱无章，又给开发带来了困扰，又会需要优化代码，抽离一些共性的代码块，并希望所有**activity**都能照此使用。
+最开始的时候，我们会按照安卓的生命周期把所有的初始化的代码都写在 **oncreate** 方法内，导致 **`oncreate`** 方法大量臃肿，此时就会着手抽离出一个个小的方法。在抽离完成之后，每个 **`activity`** 的小方法不一致，杂乱无章，又给开发带来了困扰，又会需要优化代码，抽离一些共性的代码块，并希望所有**`activity`**都能照此使用。
 
-一些**oncreacte**经常会出现的代码块，就进入了抽离的名单中，例如页面跳转传递过来的参数的初始化代码、view 的初始化代码、网络的请求代码等。这时候为了方便，我们就会创建 **baseActivity** 类，所有activity统一继承该类，再抽象出**initVariable**,**initView**,**loadData**等方法，统一在 **onCreate** 中按顺序调用。
+一些**`oncreacte`**经常会出现的代码块，就进入了抽离的名单中，例如页面跳转传递过来的参数的初始化代码、view 的初始化代码、网络的请求代码等。这时候为了方便，我们就会创建 **`baseActivity`** 类，所有activity统一继承该类，再抽象出**`initVariable`**,**`initView`**,**`loadData`**等方法，统一在 **`onCreate`** 中按顺序调用。
 
 而这时候我们学习完设计模式中的模板方法就会发现，我们的这个思路正式模板方法的封装思路，如果我们之前就学习过设计模式，就会在需求开始的时候就考虑到这种代码设计方式，减少了多次代码重构的复杂与烦恼。节约了大量的时间，就创造出了可用性高的代码。
 
