--- a/_posts/2019-04-16-设计模式-享元模式.md
+++ b/_posts/2019-04-16-设计模式-享元模式.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      享元模式
+subtitle:   享元模式详解
+date:       2019-04-16
+author:     guuguo
+catalog: true
+tags:
+    - 设计模式
+---
+
+
 # 享元模式
 
 在阎宏博士的《JAVA与模式》一书中开头是这样描述享元（Flyweight）模式的：
