--- a/_posts/2019-04-16-设计模式-设计模式六大设计原则.md
+++ b/_posts/2019-04-16-设计模式-设计模式六大设计原则.md
@@ -1,3 +1,15 @@
+---
+layout:     post
+title:      设计模式六大设计原则
+date:       2019-04-16
+author:     guuguo
+catalog: true
+tags:
+    - 设计模式
+    - 设计原则
+
+---
+
 # 设计模式六大设计原则
 
 #### 总原则－开闭原则
