--- a/_posts/2019-04-16-设计模式-命令模式.md
+++ b/_posts/2019-04-16-设计模式-命令模式.md
@@ -1,16 +1,16 @@
 ---
 layout:     post
-title:      命令模式
-subtitle:   命令模式详解
-date:       2019-04-16
-author:     guuguo
+title:      iOS手势与变形
+subtitle:   手势与变形基础知识笔记
+date:       2016-10-10
+author:     BY
+header-img: img/post-bg-ios9-web.jpg
 catalog: true
 tags:
-    - 设计模式
+    - iOS
+    - iOS开发基础
 
 ---
-
-
 
 
 
