读书笔记改名

--- a/_posts/2019-07-24-读书笔记-阿里三板斧读后感.md
+++ b/_posts/2019-07-24-读书笔记-阿里三板斧读后感.md
@@ -1,3 +1,12 @@
+layout:     post
+title:      阿里三板斧读书笔记
+subtitle:   读书笔记
+date:       2019-07-24
+author:     guuguo
+catalog: true
+tags:
+    - 读书笔记
+
 # 阿里三板斧读书笔记
 
 身为一个基层员工腿部力量，没有接触过管理岗位。看完本书明白了人人都能成为管理者，只要不断学习，不断挑战自我，把握成为领导者的机会。
